# Global-P2P

./: .dockerignore  .gitignore  Dockerfile  FINAL_CONFIG.txt  Makefile  auto_pilot.py  deploy.sh  docker-compose.yml  package-lock.json  package.json  render.yaml  vercel.json
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  RealTimeApiService.js  package-lock.json  package.json  server.js
backend/src/: main.rs
contracts/: P2PEscrow.sol
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/: App.jsx
