[package]
name = "backend"
version = "0.1.0"
edition = "2021"
description = "P2P remittance API — Axum + Tatum + optional OpenRouter P2P hints"

[dependencies]
axum = "0.7"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
url = "2"
